fixed api no auth

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"webpack-cli": "^4.10.0"
 	},
 	"scripts": {
-		"build": "tsc --build --clean",
-		"build-watch": "tsc --build --clean && tsc -w",
+		"build": "rm -rf ./dist/node && tsc --build",
+		"build-watch": "rm -rf ./dist/node && tsc -w",
 		"build-web": "webpack",
 		"build-web-watch": "webpack -w",
 		"test": "jest"
