--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/jest": "^29.2.2",
 		"babel-jest": "^29.3.0",
 		"jest": "^29.0.3",
+		"jsdoc": "^4.0.0",
 		"ts-loader": "^9.4.1",
 		"typescript": "^4.8.4",
 		"webpack": "^5.74.0",
@@ -31,7 +32,8 @@
 		"build-watch": "rm -rf ./dist/node && tsc -w",
 		"build-webpack": "webpack",
 		"build-webpack-watch": "webpack -w",
-		"test": "jest"
+		"test": "jest",
+		"docs": "tsc && jsdoc -c ./.jsdoc.json"
 	},
 	"files": [
 		"src"
