--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-typescript": "^7.18.6",
 		"@types/jest": "^29.2.2",
+		"@types/node-fetch": "^2.6.2",
 		"babel-jest": "^29.3.0",
 		"jest": "^29.0.3",
 		"jsdoc": "^4.0.0",
@@ -39,7 +40,10 @@
 		"src"
 	],
 	"dependencies": {
+		"@actions/core": "^1.10.0",
+		"@actions/github": "^5.1.1",
 		"@babel/runtime": "^7.19.0",
+		"node-fetch": "^2.6.7",
 		"react-native-storage": "^1.0.1",
 		"regenerator-runtime": "^0.13.10"
 	}
