--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,5 +31,11 @@ jobs:
 
             - name: Run tests
               run: npm run test
-              with:
-                  API_KEY: ${{ secrets.API_KEY }}
+              env:
+                CI: true
+                API_KEY: ${{ secrets.API_KEY }}
+                USER_EMAIL: ${{ secrets.USER_EMAIL }}
+                USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
+                DRIVER_EMAIL: ${{ secrets.DRIVER_EMAIL }}
+                DRIVER_PASSWORD: ${{ secrets.DRIVER_PASSWORD }}
+
