--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@actions/core": "^1.10.0",
 		"@actions/github": "^5.1.1",
 		"@babel/runtime": "^7.19.0",
+		"dotenv": "^16.0.3",
 		"node-fetch": "^2.6.7",
 		"react-native-storage": "^1.0.1",
 		"regenerator-runtime": "^0.13.10"
