--- a/package.json
+++ b/package.json
@@ -33,15 +33,13 @@
 		"build-watch": "rm -rf ./dist/node && tsc -w",
 		"build-webpack": "webpack",
 		"build-webpack-watch": "webpack -w",
-		"test": "jest",
+		"test": "jest --silent",
 		"docs": "tsc && jsdoc -c ./.jsdoc.json"
 	},
 	"files": [
 		"src"
 	],
 	"dependencies": {
-		"@actions/core": "^1.10.0",
-		"@actions/github": "^5.1.1",
 		"@babel/runtime": "^7.19.0",
 		"dotenv": "^16.0.3",
 		"node-fetch": "^2.6.7",
