re-release on npm as @inaza/motorjs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@inaza.com/motorjs",
-	"version": "0.1.7-alpha",
+	"name": "@inaza/motorjs",
+	"version": "0.1.0-alpha",
 	"description": "Inaza JS SDK",
 	"main": "dist/node/index.js",
 	"authors": [
