--- a/example-react-native/package.json
+++ b/example-react-native/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@inaza.com/motorjs": "file:..",
+    "@inaza/motorjs": "file:..",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "save": "^2.9.0"
