--- a/example-react/package.json
+++ b/example-react/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
-    "@inaza.com/motorjs": "file:.."
+    "@inaza/motorjs": "file:.."
   },
   "scripts": {
     "start": "react-scripts start",
