--- a/example-snippets/package.json
+++ b/example-snippets/package.json
@@ -4,6 +4,6 @@
 	"private": true,
 	"dependencies": {
 		"typescript": "^4.8.4",
-		"@inaza.com/motorjs": "file:.."
+		"@inaza/motorjs": "file:.."
 	}
 }
